ajusta a barra de progresso e bug no dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@
   --color-border-light: var(--color-border-dark);
 }
 
+
 // BASE GLOBAL
 *,
 *::before,
@@ -40,7 +41,6 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: var(--font-family-display);
-  background-color: var(--color-background-light);
   color: var(--color-text-light);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
